--- a/backup/losowanie_sortowanie.lfm
+++ b/backup/losowanie_sortowanie.lfm
@@ -1,4 +1,4 @@
-object Form1: TForm1
+object Form_LosSort: TForm_LosSort
   Left = 1087
   Height = 600
   Top = 157
@@ -7,37 +7,61 @@ object Form1: TForm1
   ClientHeight = 600
   ClientWidth = 543
   LCLVersion = '2.0.12.0'
-  object Button1: TButton
-    Left = 392
+  object Button_Koniec: TButton
+    Left = 360
     Height = 41
     Top = 528
     Width = 99
     Caption = 'Koniec'
-    OnClick = Button1Click
+    OnClick = Button_KoniecClick
     TabOrder = 0
   end
-  object Button2: TButton
-    Left = 392
+  object Button_Info: TButton
+    Left = 360
     Height = 40
     Top = 464
     Width = 99
     Caption = 'Info'
+    OnClick = Button_InfoClick
     TabOrder = 1
   end
-  object Button3: TButton
-    Left = 48
+  object Button_Sortuj: TButton
+    Left = 80
     Height = 41
     Top = 528
     Width = 96
     Caption = 'Sortuj'
     TabOrder = 2
   end
-  object Button4: TButton
-    Left = 48
+  object Button_Losuj: TButton
+    Left = 80
     Height = 40
     Top = 464
     Width = 96
     Caption = 'Losuj'
     TabOrder = 3
+  end
+  object Lista_Losowanie: TListBox
+    Left = 24
+    Height = 394
+    Top = 24
+    Width = 216
+    ItemHeight = 0
+    TabOrder = 4
+  end
+  object Lista_Sortowanie: TListBox
+    Left = 304
+    Height = 394
+    Top = 24
+    Width = 217
+    ItemHeight = 0
+    TabOrder = 5
+  end
+  object Edit_Info: TEdit
+    Left = 32
+    Height = 23
+    Top = 432
+    Width = 480
+    TabOrder = 6
   end
 end
